[package]
name = "neat_race"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "^0.17", features = ["rayon"]}
rayon = "^1.11"
macroquad = "^0.4"
rand = "^0.10"
rusty_neat = "^0.2"
# rusty_neat = {path = "../rusty_neat"}
bincode = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
